fix overflow issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,8 +11,12 @@
 body {
     font-family: 'Poppins', sans-serif;
     color: #333;
+    overflow-x: hidden;
 }
 
+.main-container{
+    overflow-x: hidden;
+}
 /* Logo styling */
 .logo {
     display: flex;
